--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,4 @@
 {
-  "name": "djagya/bitcoin-blockio-wrapper",
-  "description": "Simple wrapper for Block.io API for multiple addresses for multiple users management purposes. Created for personal purposes.",
-  "version": "0.1",
-  "keywords": [
-    "bitcoin",
-    "wallet",
-    "block.io"
-  ],
-  "type": "library",
   "license": "MIT",
   "authors": [
     {
@@ -15,13 +6,9 @@
       "email": "danil.kabluk@gmail.com"
     }
   ],
+  "minimum-stability": "dev",
   "require": {
     "php": ">=5.5",
-    "block_io-php/block_io-php": "^1.1"
-  },
-  "autoload": {
-    "psr-4": {
-      "djagya\\bitcoin\\": "src/"
-    }
+    "djagya/bitcoin-blockio-wrapper": "*"
   }
 }
